--- a/lab8_2/lab8_2.qsf
+++ b/lab8_2/lab8_2.qsf
@@ -1106,4 +1106,6 @@ set_location_assignment PIN_V24 -to HSMC_CLKOUT_N2
 set_instance_assignment -name IO_STANDARD LVDS -to HSMC_CLKOUT_N2
 set_location_assignment PIN_G24 -to HSMC_CLKOUT_N1
 set_instance_assignment -name IO_STANDARD LVDS -to HSMC_CLKOUT_N1
+set_global_assignment -name SYNTH_TIMING_DRIVEN_SYNTHESIS ON
+set_global_assignment -name STATE_MACHINE_PROCESSING "USER-ENCODED"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
